--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
             <button href="https://coinswitch.co/pro/btc-inr/csx?utm_source=header_home"> <h3>Login To Pro </h3></button>
         </div>
     </nav>
+    <main>
+        <section class="hero">
+            <div  class="hero">
+                <img  id="heroimg" style="display: inline-block;" src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/blockchain.webp" alt="Blockchain Illustration">
+                <div style="display: inline;">
+                    <h1 id="para1">We believe that Web3 and blockchain are the foundations of the new digital, decentralized economy.</h1>
+                    <p id="para2">To this end, we're partnering with startups that are advancing the future of Blockchain technology. We provide early stage founders with the capital, network connections and most importantly, the advice they need to transform the Web3 landscape in India.</p>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
