--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
                 </div>
             </div>
         </section>
+        <section class="features">
+            <h2>Why it Matters?</h2>
+            <div class="feature-cards">
+                <div style="display: inline-block; margin-left: 50px;" class="feature-card">
+                    <img src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/partnership.svg" alt="Feature 1">
+                    <p>Partnership with India’s largest wealth tech destination</p>
+                </div>
+                <div style="display: inline-block; margin-left: 50px;" class="feature-card">
+                    <img src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/network.svg" alt="Feature 2">
+                    <p>Access to a network of 70+ global venture capital partners</p>
+                </div>
+                <div style="display: inline-block; margin-left: 50px;" class="feature-card">
+                    <img src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/capital.svg" alt="Feature 3">
+                    <p>Capital infusion up to $250,000</p>
+                </div>
+                <div style="display: inline-block; margin-left: 50px;" class="feature-card">
+                    <img src="https://s3.ap-southeast-1.amazonaws.com/files.coinswitch.co/images/mentorship.svg" alt="Feature 4">
+                    <p>Mentorship from in-house experts</p>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
